# todo-graphql-backend

./: LICENSE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docs_pages.yml  python-app-test.yml
app/: main.py
app/db/: database.py  models.py
app/gql/: mutations.py  queries.py  types.py
app/notes/: mutations.py
app/user/: mutations.py
app/utils/: database.py  decorators.py  email.py  env.py  jwt.py  password.py  user.py
docs/: app.db.rst  app.gql.rst  app.notes.rst  app.rst  app.user.rst  app.utils.rst  conf.py  index.rst  modules.rst  tests.rst  tests.test_app.rst  tests.test_app.test_db.rst  tests.test_app.test_gql.rst  tests.test_app.test_user.rst  tests.test_app.test_utils.rst
tests/test_app/test_db/: test_models.py
tests/test_app/test_utils/: test_decorators.py  test_email.py  test_jwt.py  test_password.py
